	  (see http://sourceforge.net/projects/microchipopen/).
	* configs/mirtoo/nsh:  Added a NuttShell (NSH) configuration for
	  the Mirtoo module.
	* configs/mirtoo/scripts:  Move all Mirtoo linker scripts to a common
	  directory.
	* arch/mips/src/pic32mx/pic32mx-gpio.c:  All digital inputs were being
	  configured as outputs.  This is a *critical* bug fix and needs to be
	  incorporated by any PIC32 users.
	* drivers/mtd/sst25.c:  Added a driver for the SST 25 SPI-based FLASH
	  parts.
	* configs/mirtoo/src/up_nsh.c:  The Mirtoo NSH configuration can now
	  mount the SST 25 devices so that it can be used for a FAT file system.
	  There are are, however, some NSH memory usage issues if this configuration
	  enabled now.  Some tuning is still needed.
	* configs/mirtoo/nxffs:  Add an alternative NSH configure for the Mirtoo
	  module for testing the on-module SST 25 chip using the NXFFS file system.
	* arch/arm/src/lpc43xx and arch/arm/include/lpc43xx:  The NXP LPC43xx port
	  is slowly evolving in these directories.
	* configs/stm3210e-eval/pm:  Add a new configuration for testing STM32 power
	  management.
	* configs/stm3210e-eval/scripts:  Moved all of the duplicate ST3210-EVAL 
	  linker scripts into one set of linker scripts at this location.
	* configs/stm3210e-eval/src/up_buttons.c, up_lcd.c, and up_pm.c:  New logic
	  for testing STM32 power management.
	* configs/lincoln60:  Add a configuration to support the Micromint Lincoln60
	  board.
	* configs/ekk-lm3s3b96:  Add a configuration to support the TI/Stellaris
	  EKK-LM3S3B96 development board.  Contributed by Jose Pablo Rojas V.
	* arch/arm/src/lpc43xx/chip:  Created header files for *all* (really)
	  lpc43xx registers and all bit-fields.
	* configs/lpc4330-xplorer:  Added a configuration for the NXP LPC43XX
	  Xplorer board.  This is just to facilitate testing of the LPC43xx
	  port but will, with any luck, become proper board support for that
	  board.
